fix: revision documentacion, limpieza logs
