# swagger/swagger.json
@@ -135,7 +135,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.HistoricoActa"
+                                "$ref": "#/definitions/models.ActaRecibido"
                             }
                         }
                     },
@@ -1255,40 +1255,6 @@
                 }
             }
         },
-        "models.EstadoActa": {
-            "title": "EstadoActa",
-            "type": "object",
-            "properties": {
-                "Activo": {
-                    "type": "boolean"
-                },
-                "CodigoAbreviacion": {
-                    "type": "string"
-                },
-                "Descripcion": {
-                    "type": "string"
-                },
-                "FechaCreacion": {
-                    "type": "string",
-                    "format": "datetime"
-                },
-                "FechaModificacion": {
-                    "type": "string",
-                    "format": "datetime"
-                },
-                "Id": {
-                    "type": "integer",
-                    "format": "int64"
-                },
-                "Nombre": {
-                    "type": "string"
-                },
-                "NumeroOrden": {
-                    "type": "number",
-                    "format": "double"
-                }
-            }
-        },
         "models.EstadoElemento": {
             "title": "EstadoElemento",
             "type": "object",
@@ -1320,33 +1286,6 @@
                 "NumeroOrden": {
                     "type": "number",
                     "format": "double"
-                }
-            }
-        },
-        "models.HistoricoActa": {
-            "title": "HistoricoActa",
-            "type": "object",
-            "properties": {
-                "ActaRecibidoId": {
-                    "$ref": "#/definitions/models.ActaRecibido"
-                },
-                "Activo": {
-                    "type": "boolean"
-                },
-                "EstadoActaId": {
-                    "$ref": "#/definitions/models.EstadoActa"
-                },
-                "FechaCreacion": {
-                    "type": "string",
-                    "format": "datetime"
-                },
-                "FechaModificacion": {
-                    "type": "string",
-                    "format": "datetime"
-                },
-                "Id": {
-                    "type": "integer",
-                    "format": "int64"
                 }
             }
         },
